--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,5 @@ dependencies {
     implementation 'com.akhgupta:android-easylocation:1.0.1'
 
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
-
-
