--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,12 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    repositories {
+        maven {
+            url "http://dl.bintray.com/lukaville/maven"
         }
     }
 }
@@ -31,6 +36,15 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.akhgupta:android-easylocation:1.0.1'
 
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.5'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.nbsp:library:1.8'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
